--- a/src/styles.css
+++ b/src/styles.css
@@ -196,6 +196,47 @@ h1 {
   border: 0;
 }
 
+.keyboard {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.keyboard-row {
+  display: flex;
+  gap: 2px;
+  margin-bottom: 2px;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.keyboard-button {
+  color: black;
+  background: var(--color-gray-700);
+  position: relative;
+  width: 9%;
+  display: grid;
+  place-content: center;
+  aspect-ratio: 1 / 1;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.keyboard-button.correct {
+  background: var(--color-success);
+  color: white;
+}
+.keyboard-button.incorrect {
+  background: var(--color-gray-300);
+  color: white;
+}
+.keyboard-button.misplaced {
+  background: var(--color-warning);
+  color: white;
+}
+
 /*
   Modal styles
 
