--- a/src/styles.css
+++ b/src/styles.css
@@ -224,6 +224,23 @@ h1 {
   font-weight: 700;
 }
 
+.restart-button {
+  color: black;
+  background: var(--color-gray-700);
+  position: relative;
+  width: fit-content;
+  display: grid;
+  place-content: center;
+  padding: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 700;
+  border: 2px solid var(--color-gray-300);
+}
+
 .keyboard-button.correct {
   background: var(--color-success);
   color: white;
